--- a/LanzadorWPF/Window1.xaml
+++ b/LanzadorWPF/Window1.xaml
@@ -1,41 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Window
 	x:Class="LanzadorWPF.Window1" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	Title="LanzadorWPF"
-	Width="300"
+	Title="Lanzador de Aplicaciones"
+	Width="500"
 	Height="417"
-	x:Name="window1">
+	x:Name="window1"
+	Closing="Window1_Closing">
 	<Grid>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="*"></RowDefinition>
 			<RowDefinition Height="Auto"></RowDefinition>
 		</Grid.RowDefinitions>
-		<WrapPanel Grid.Row="0">
+		<DockPanel
+			Grid.Row="0">
 			<ListView
-			Name="lstApp">
-				<ListViewItem></ListViewItem>
-				<ListViewItem></ListViewItem>
-			</ListView>			
-		</WrapPanel>
+				Name="LvApp"
+				ScrollViewer.VerticalScrollBarVisibility="Visible"
+				ScrollViewer.CanContentScroll="False"
+				ItemsSource="{Binding}"
+				IsSynchronizedWithCurrentItem="True"
+				MouseDoubleClick="LvApp_MouseDoubleClick">
+				<ListView.View>
+					<GridView>
+						<GridViewColumn
+							Header="Aplicacion"
+							Width="380"
+							DisplayMemberBinding="{Binding Ruta}" />						
+						<GridViewColumn
+							Header="Conteo"
+							Width="60"
+							DisplayMemberBinding="{Binding Hits}" />
+					</GridView>
+				</ListView.View>
+			</ListView>
+		</DockPanel>
 		<WrapPanel Grid.Row="1">
+			<WrapPanel.Resources>
+				<Style TargetType="Button">
+					<Setter Property="Height" Value="30"></Setter>
+					<Setter Property="Margin" Value="5,5"></Setter>
+				</Style>
+			</WrapPanel.Resources>
 			<Button
 				Name="btnLanzar"
-				Click="btnLazar_Click"
-				Height="30">Lanzar</Button>
+				Width="80"
+				Click="btnLazar_Click">Lanzar</Button>
 			<Button
 				Name="btnAgregar"
-				Click="btnAgregar_Click"
-				Width="30"
-				Background="#FF36FF32">+</Button>
+				Background="#FF36FF32"
+				Width="40"
+				Click="btnAgregar_Click">+</Button>
 			<Button
 				Name="btnEliminar"
-				Click="btnEliminar_Click"
-				Width="30"
-				Background="#FFF90717">-</Button>
+				Background="#FFF90717"
+				Width="40"
+				Click="btnEliminar_Click">-</Button>
 			<Button
 				Name="btnReiniciar"
-				Click="btnReiniciar_Click"
-				Width="30">Reiniciar</Button>
+				Width="60"
+				Click="btnReiniciar_Click">Reiniciar</Button>
 		</WrapPanel>
 	</Grid>
 </Window>
